# zorya

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cpu_mapping.txt  execution_trace.txt  gdb.txt  kernel-vdso.out  kernel-vvar.out  qemu_log.txt  test_log.txt
doc/: Strategies.md
results/: function_signature.json  function_signature.txt  function_signature_arg_registers.json  function_signature_arg_types.json  function_signatures_go.json
results/examples/: execution_trace.txt
scripts/: dump_memory.sh  dwarf_get_all_function_args.py  explore_ast_panic.py  find_os_args.py  find_panic_xrefs.py  get_all_function_args.py  get_function_arg.sh  get_function_args.py  get_jump_tables.py  ghidra_get_all_function_args.py  zorya
scripts/get-funct-arg-types/: go.mod  main  main.go
scripts/scripts_dump_registers_memory/: execute_commands.py  parse_and_generate.py
src/: find_panic_xrefs.py  lib.rs  main.rs  print_os_args.py  target_info.rs
src/concolic/: concolic_enum.rs  concolic_var.rs  concrete_var.rs  executor.rs  executor.rs.save  executor_bool.rs  executor_callother.rs  executor_callother.txt  executor_callother_syscalls.rs  executor_float.rs  executor_int.rs  get_jump_table_destinations.py  mod.rs  symbolic_var.rs  traits.txt  z3_integration.rs
src/state/: au-cas-ou.txt  (+16 more)
tests/: int-test-2.rs  int-test-3.rs  int-test-3.txt  int-test-4.rs  int-test-5.rs  integration_test.rs  pcode_data1.txt  tests_executor.rs  tests_executor_bool.rs  tests_executor_callother.rs  tests_executor_callother.txt  tests_executor_float.rs  tests_executor_int.rs
(+29 files in other folders)
