[package]
name = "zorya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.12.1"
parser = { path = "external/pcode-parser" }
goblin = "0.8.0"
lazy_static = "1.4.0"
ethnum = "1.5.0"
regex = "1.10.4"
anyhow = "1.0.81"
gdbstub = "0.7.1"
