[package]
name = "zorya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.12.1"
parser = { path = "external/pcode-parser" }
goblin = "0.8.0"
lazy_static = "1.4.0"
ethnum = "1.5.0"
regex = "1.10.4"
anyhow = "1.0.81"
gdbstub = "0.7.1"
once_cell = "1.19.0"
memmap = "=0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
z3-sys = "0.8.1"
nix = "0.29.0"
memmap2 = "0.9.5"
